--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -12,7 +12,7 @@ KYLIB_DIR = $(SRC)/kylib
 BISON = bison
 FLEX = flex
 
-INCLUDES = -I$(PARSER_DIR) -I$(VM_DIR) -I$(PRIMITIVE_DIR) -I$(INCLUDE_DIR) -I$(CORELIB_DIR) -I$(KYLIB_DIR) `pkg-config --cflags gtk+-2.0`
+AM_CPPFLAGS = -I$(PARSER_DIR) -I$(VM_DIR) -I$(PRIMITIVE_DIR) -I$(INCLUDE_DIR) -I$(CORELIB_DIR) -I$(KYLIB_DIR) `pkg-config --cflags gtk+-2.0`
 DEFS += -DGCC -DLINUX -D_GNU_SOURCE -DI386 -DANSI=1 -DSYSV -DMAXPATHLEN=1024 -D_REENTRANT -DPRODUCE_ANSI_CODE -DUCI_TEMPORARY
 LIBS += `pkg-config --libs gtk+-2.0`
 
