--- a/Makefile.linux
+++ b/Makefile.linux
@@ -18,13 +18,13 @@ LDFLAGS = -L/usr/lib -lboost_regex -lboost_filesystem -lboost_date_time -lreadli
 ORCA_OBJ = $(PARSER_OBJ) $(VM_OBJ) $(LIB_OBJ) $(PRIMITIVE_OBJ) $(CORE_OBJ) $(KY_OBJ)
 ORCA_DEPS = $(PARSER_DEPS) $(VM_DEPS) $(LIB_DEPS) $(PRIMITIVE_DEPS) $(CORE_DEPS)
 
-PARSER_OBJ = parser_common.o lexer.o parser.o parserCode.o parserControl.o parserOP.o parserException.o parserParse.o
+PARSER_OBJ = parserParser.o lexer.o parser.o parserCode.o parserControl.o parserOP.o parserException.o parserParse.o
 VM_OBJ = orcaData.o orcaLocal.o orcaObject.o orcaObjectMembers.o orcaObjectMembersIter.o orcaObjectParents.o orcaObjectParentsIter.o orcaRoot.o orcaStack.o orcaVM.o orcaTrace.o orcaForStack.o orcaDecodeStack.o porting.o main.o orcaGlobal.o orcaPure.o orcaOnce.o orcaParserObject.o
 PRIMITIVE_OBJ = orcaBoolean.o orcaInteger.o orcaFloat.o orcaList.o orcaVirtList.o orcaListIter.o orcaListIterator.o orcaSbf.o orcaString.o orcaTuple.o orcaTupleIter.o orcaMap.o orcaMapIter.o
 CORE_OBJ = base64.o orcaDatetime.o orcaPack.o orcaGtk.o
 KY_OBJ = kyString.o
 
-PARSER_DEPS = parser_common.d lexer.d parser.d parserCode.d parserControl.d parserOP.d parserException.d parserParse.d
+PARSER_DEPS = parserParser.d lexer.d parser.d parserCode.d parserControl.d parserOP.d parserException.d parserParse.d
 VM_DEPS = orcaData.d orcaLocal.d orcaObject.d orcaRoot.d orcaStack.d orcaVM.d orcaTrace.d orcaForStack.d orcaDecodeStack.d main.d orcaGlobal.d orcaPure.d orcaOnce.d orcaParserObject.d
 PRIMITIVE_DEPS = orcaBoolean.d orcaInteger.d orcaFloat.d orcaList.d orcaVirtList.d orcaListIter.d orcaListIterator.d orcaSbf.d orcaString.d orcaTuple.d orcaTupleIter.d orcaMap.d orcaMapIter.d
 CORE_DEPS = base64.d orcaDatetime.d orcaPack.d orcaGtk.d
