fix strdup -> ::strdup in parserParser

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -211,10 +211,10 @@ STRIP = strip
 VERSION = 0.5
 YACC = bison -y
 YFLAGS = 
-abs_builddir = /home/ubuntu/lab/orca/lib
-abs_srcdir = /home/ubuntu/lab/orca/lib
-abs_top_builddir = /home/ubuntu/lab/orca
-abs_top_srcdir = /home/ubuntu/lab/orca
+abs_builddir = /home/lynix/lab/orca/lib
+abs_srcdir = /home/lynix/lab/orca/lib
+abs_top_builddir = /home/lynix/lab/orca
+abs_top_srcdir = /home/lynix/lab/orca
 ac_ct_AR = ar
 ac_ct_CC = gcc
 ac_ct_CXX = g++
@@ -244,7 +244,7 @@ host_vendor = unknown
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/ubuntu/lab/orca/install-sh
+install_sh = ${SHELL} /home/lynix/lab/orca/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
@@ -253,7 +253,7 @@ mandir = ${datarootdir}/man
 mkdir_p = $(MKDIR_P)
 oldincludedir = /usr/include
 pdfdir = ${docdir}
-prefix = /home/ubuntu/orca
+prefix = /home/lynix/orca
 program_transform_name = s,x,x,
 psdir = ${docdir}
 sbindir = ${exec_prefix}/sbin
