--- a/extlib/mysql/Makefile
+++ b/extlib/mysql/Makefile
@@ -1,22 +1,16 @@
 CXX = g++
-
-
-CFLAGS = -g -I${ORCA_HOME}/include/orca -DLINUX  -I/usr/include/mysql
-
+CFLAGS = -g -I${ORCA_HOME}/include/orca -DLINUX -I/usr/include/mysql
 LDFLAGS = -lorca `mysql_config --libs`
-
-
 
 TARGET_LIB = liborca_mysql.so
 LIB_OBJ = orcaMysql.o
-
 
 all	: $(TARGET_LIB) 
 
 $(TARGET_LIB) : $(LIB_OBJ) Makefile
 	$(CXX) -shared -o $(TARGET_LIB) $(LIB_OBJ) $(LDFLAGS)
 
-%o : %cpp
+%.o: %.cpp
 	$(CXX) $(CFLAGS) -c -fPIC $<
 
 install:
