--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,6 +1,6 @@
 
 orcalibdir = $(prefix)/lib/orca
-orcalib_DATA = alg.kw alg.orca cached.kw cached.orca dfsd.kw dfsd.orca dist.kw dist.orca fs.kw fs.orca fun.kw fun.orca gnuplot.kw gnuplot.orca gui.kw gui.orca httpd.kw httpd.orca httplib.kw httplib.orca json.kw json.orca lisp.kw lisp.orca match.kw match.orca osp.kw osp.orca remotec.kw remotec.orca remoted.kw remoted.orca run.kw run.orca sh.kw sh.orca util.kw util.orca xml.kw xml.orca log.kw log.orca 
+orcalib_DATA = alg.kw alg.orca cached.kw cached.orca dfsd.kw dfsd.orca dist.kw dist.orca fs.kw fs.orca fun.kw fun.orca gnuplot.kw gnuplot.orca gui.kw gui.orca httpd.kw httpd.orca httplib.kw httplib.orca json.kw json.orca lisp.kw lisp.orca match.kw match.orca osp.kw osp.orca remotec.kw remotec.orca remoted.kw remoted.orca run.kw run.orca sh.kw sh.orca util.kw util.orca xml.kw xml.orca log.kw log.orca orm.kw orm.orca
 
 orcalibsonardir = $(prefix)/lib/orca/sonar.orca
 orcalibsonar_DATA = sonar.orca/CODE.kw sonar.orca/CODE.orca
