--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -81,6 +81,7 @@ liborca_la_SOURCES = \
 		$(CORELIB_DIR)/orcaSocket.cpp \
 		$(CORELIB_DIR)/orcaIO.cpp \
 		$(CORELIB_DIR)/orcaOS.cpp \
+		$(CORELIB_DIR)/orcaIPC.cpp \
 		$(KYLIB_DIR)/kyString.cpp 
 
 liborca_la_LDFLAGS = -version-number 0:5:0
