make html.tag & add strings.builder.write

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -2,26 +2,11 @@
 orcalibdir = $(prefix)/lib/orca
 orcalib_DATA = alg.kw alg.orca fun.kw fun.orca gui.kw gui.orca run.kw run.orca log.kw log.orca get.orca get.kw
 
-orcalibsonardir = $(prefix)/lib/orca/sonar.orca
-orcalibsonar_DATA = sonar.orca/CODE.kw sonar.orca/CODE.orca
-
-orcalibsonarcontribdir = $(prefix)/lib/orca/sonar.orca/contrib.orca
-orcalibsonarcontrib_DATA = sonar.orca/contrib.orca/admin.kw sonar.orca/contrib.orca/admin.orca
-
-orcalibsonarcoredir = $(prefix)/lib/orca/sonar.orca/core.orca
-orcalibsonarcore_DATA = sonar.orca/core.orca/CODE.kw sonar.orca/core.orca/CODE.orca sonar.orca/core.orca/client.kw sonar.orca/core.orca/client.orca sonar.orca/core.orca/httpd.kw sonar.orca/core.orca/httpd.orca sonar.orca/core.orca/manager.kw sonar.orca/core.orca/manager.orca sonar.orca/core.orca/session.kw sonar.orca/core.orca/session.orca
-
-orcalibsonartemplatedir = $(prefix)/lib/orca/sonar.orca/template.orca
-orcalibsonartemplate_DATA = sonar.orca/template.orca/CODE.kw sonar.orca/template.orca/CODE.orca
-
-orcalibsonarhttpdir = $(prefix)/lib/orca/sonar.orca/http.orca
-orcalibsonarhttp_DATA = sonar.orca/http.orca/request.kw sonar.orca/http.orca/request.orca
-
 orcalibdistributedir = $(prefix)/lib/orca/distribute.orca
 orcalibdistribute_DATA = distribute.orca/remotec.orca distribute.orca/remotec.kw distribute.orca/remoted.orca distribute.orca/remoted.kw distribute.orca/dist.orca distribute.orca/dist.kw distribute.orca/fs.orca distribute.orca/fs.kw distribute.orca/dfsd.orca distribute.orca/dfsd.kw
 
 orcalibnetdir = $(prefix)/lib/orca/net.orca
-orcalibnet_DATA = net.orca/httplib.orca net.orca/httpd.orca net.orca/osp.orca net.orca/httplib.kw net.orca/httpd.kw net.orca/osp.kw
+orcalibnet_DATA = net.orca/httplib.orca net.orca/httpd.orca net.orca/osp.orca net.orca/url.orca net.orca/httplib.kw net.orca/httpd.kw net.orca/osp.kw net.orca/url.kw
 
 orcaliblangdir = $(prefix)/lib/orca/lang.orca
 orcaliblang_DATA = lang.orca/lisp.orca lang.orca/lisp.kw lang.orca/sh.kw lang.orca/sh.orca
@@ -35,6 +20,21 @@ orcalibutil_DATA = util.orca/CODE.kw util.orca/match.kw util.orca/CODE.orca util
 orcalibtooldir = $(prefix)/lib/orca/tool.orca
 orcalibtool_DATA = tool.orca/gnuplot.kw tool.orca/gnuplot.orca
 
+orcalibsonardir = $(prefix)/lib/orca/sonar.orca
+orcalibsonar_DATA = sonar.orca/CODE.kw sonar.orca/CODE.orca
+
+orcalibsonarcoredir = $(prefix)/lib/orca/sonar.orca/core.orca
+orcalibsonarcore_DATA = sonar.orca/core.orca/CODE.kw sonar.orca/core.orca/CODE.orca sonar.orca/core.orca/client.kw sonar.orca/core.orca/client.orca sonar.orca/core.orca/httpd.kw sonar.orca/core.orca/httpd.orca sonar.orca/core.orca/manager.kw sonar.orca/core.orca/manager.orca sonar.orca/core.orca/session.kw sonar.orca/core.orca/session.orca
+
+orcalibsonartemplatedir = $(prefix)/lib/orca/sonar.orca/template.orca
+orcalibsonartemplate_DATA = sonar.orca/template.orca/CODE.kw sonar.orca/template.orca/CODE.orca
+
+orcalibsonarhttpdir = $(prefix)/lib/orca/sonar.orca/http.orca
+orcalibsonarhttp_DATA = sonar.orca/http.orca/request.kw sonar.orca/http.orca/request.orca
+
+orcalibsonarcontribdir = $(prefix)/lib/orca/sonar.orca/contrib.orca
+orcalibsonarcontrib_DATA = sonar.orca/contrib.orca/admin.kw sonar.orca/contrib.orca/admin.orca
+
 orcalibstoragedir = $(prefix)/lib/orca/storage.orca
 orcalibstorage_DATA = storage.orca/CODE.kw storage.orca/CODE.orca storage.orca/cached.kw storage.orca/cached.orca
 
@@ -42,8 +42,11 @@ orcalibormdir = $(prefix)/lib/orca/orm.orca
 orcaliborm_DATA = orm.orca/CODE.kw orm.orca/CODE.orca orm.orca/model.kw orm.orca/model.orca orm.orca/type.orca orm.orca/type.kw
 
 orcalibhtmldir = $(prefix)/lib/orca/html.orca
-orcalibhtml_DATA = html.orca/CODE.kw html.orca/CODE.orca html.orca/jqueryui.kw html.orca/jqueryui.orca 
+orcalibhtml_DATA = html.orca/CODE.kw html.orca/CODE.orca html.orca/jqueryui.kw html.orca/jqueryui.orca html.orca/tag.kw html.orca/tag.orca 
 
 orcalibformdir = $(prefix)/lib/orca/html.orca/form.orca
 orcalibform_DATA = html.orca/form.orca/CODE.kw html.orca/form.orca/CODE.orca html.orca/form.orca/input.kw html.orca/form.orca/input.orca
+
+orcalibstringsdir = $(prefix)/lib/orca/strings.orca
+orcalibstrings_DATA = strings.orca/CODE.kw strings.orca/CODE.orca
 
