--- a/configure.ac
+++ b/configure.ac
@@ -46,6 +46,8 @@ AC_CHECK_LIB([boost_system], [main])
 AC_CHECK_LIB([gmp], [main])
 AC_CHECK_LIB([gtk], [main])
 AC_CHECK_LIB([sqlite3], [main])
+AC_CHECK_LIB([ssl], [main])
+AC_CHECK_LIB([crypto], [main])
 
 # Install dir
 DIR_DEFS="-DORCA_PREFIXDIR=\\\"\$(prefix)\\\" -DORCA_BINDIR=\\\"\$(bindir)\\\" -DORCA_LIBDIR=\\\"\$(libdir)\\\""
