--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -92,6 +92,7 @@ liborca_la_SOURCES = \
 		$(CORELIB_DIR)/orcaOS.cpp \
 		$(CORELIB_DIR)/orcaIPC.cpp \
 		$(CORELIB_DIR)/orcaFile.cpp \
+		$(CORELIB_DIR)/orcaTls.cpp \
 		$(KYLIB_DIR)/kyString.cpp 
 
 liborca_la_LDFLAGS = -version-number 0:5:0
