--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -91,6 +91,8 @@ liborca_la_SOURCES = \
 		$(CORELIB_DIR)/orcaFile.cpp \
 		$(CORELIB_DIR)/orcaTls.cpp \
 		$(CORELIB_DIR)/orcaCrypto.cpp \
+		$(CORELIB_DIR)/orcaUnsafe.cpp \
+		$(CORELIB_DIR)/orcaCompress.cpp \
 		$(KYLIB_DIR)/kyString.cpp 
 
 liborca_la_LDFLAGS = -version-number 0:5:0
